assets/sass/local.sass
.govuk-main-wrapper
  min-height: 600px

.key-details-header
  font-weight: 300
  font-size: 27px
  line-height: 20px
  margin-bottom: 30px

.address-formatting > p
  margin: 0
  
.designer-row
  background-color: #f3f2f1

.checkbox-action
  margin-left: auto
  align-content: center
.background-grey
  background-color: #F0F4F5

.psr-complete-card
  background-color: #00703c
  color: #ffffff
  padding: 24px
  max-width: 420px

.psr-complete-card__title
  color: #ffffff
  margin-bottom: 16px

.psr-complete-card__date
  display: block

.psr-complete-card .govuk-body
  color: #ffffff

.psr-complete-links
  padding-left: 18px

